--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							I am Second Year Engineering Student at Mcmaster pursuing Computer Engineering. My Programming Experience includes Java, C++, Python and C. 
-                            I have always enjoyed programming and engineering whether it be new lines of code or creating anything that helps the user experience.
+							I am a second year engineering student at Mcmaster Universty pursuing a degree in Computer Engineering. My programming experience includes Java, C++, Python and C. 
+                            I have always enjoyed programming and engineering, whether it be writing new lines of code or creating anything that helps user experience.
 						</p>
 						<p>
 						</p>
