--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="banner-content col-lg-12 justify-content-center">
 						<h1>Pavneet Gill</h1>
 						<h3>Personal portfolio Website</h3>
-						<a href="Pavneet%20GIll%20Resume.pdf" class="primary-btn">Hire Me</a>
+						<a href="Pavneet%20GIll%20Resume.pdf" class="primary-btn">Résumé</a>
 					</div>
 				</div>
 			</div>
